tests/rosetta/out/Fortran/composite-numbers-k-with-no-single-digit-factors-whose-factors-are-all-substrings-of-k.f90
! Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
program composite_numbers_k_with_no_single_digit_factors_whose_factors_are_all_substrings_of_k
  implicit none
    integer, allocatable, dimension(:) :: factors
    integer :: x
    integer :: p
        integer, allocatable, dimension(:) :: app0
      integer, allocatable, dimension(:) :: app1
    integer :: s
    character(len=100) :: out
    integer :: i
    integer :: c
    character(len=100) :: s2
    integer :: str
    integer :: end
    integer, allocatable, dimension(:) :: res
    integer :: count
    integer :: k
    logical :: includesAll
    integer :: prev
    integer :: f
    integer :: fs
    character(len=100) :: line
    integer :: e
        character(len=100) :: s3
        integer :: i4
          character(len=100) :: s5
          integer, allocatable, dimension(:) :: app6
    integer :: i7
    integer :: i8
  call main()
  
  contains
  recursive integer function primeFactors(n) result(res)
    integer, intent(in) :: n
    allocate(factors(0))
    x = n
    do while ((mod(x,2) == 0))
      factors = (/2/)
      x = int(((x / 2)))
    end do
    p = 3
    do while (((p * p) <= x))
      do while ((mod(x,p) == 0))
        if (allocated(app0)) deallocate(app0)
        allocate(app0(size(factors)+1))
        app0(1:size(factors)) = factors
        app0(size(factors)+1) = p
        factors = app0
        x = int(((x / p)))
      end do
      p = (p + 2)
    end do
    if ((x > 1)) then
      if (allocated(app1)) deallocate(app1)
      allocate(app1(size(factors)+1))
      app1(1:size(factors)) = factors
      app1(size(factors)+1) = x
      factors = app1
    end if
    res = factors
    return
  end function primeFactors
  recursive character(len=100) function commatize(n) result(res)
    integer, intent(in) :: n
    write(s2,'(G0)') n
    s = s2
    out = ''
    i = (size(s) - 1)
    c = 0
    do while ((i >= 0))
      out = (s(i+1:(i + 1)) + out)
      c = (c + 1)
      if ((((mod(c,3) == 0) .and. i) > 0)) then
        out = ',' // out
      end if
      i = (i - 1)
    end do
    res = out
    return
  end function commatize
  recursive integer function indexOf(s,sub) result(res)
    character(len=100), intent(in) :: s
    character(len=100), intent(in) :: sub
    i = 0
    do while (((i + size(sub)) <= size(s)))
      if ((s(i+1:(i + size(sub))) == sub)) then
        res = i
        return
      end if
      i = (i + 1)
    end do
    res = -1
    return
  end function indexOf
  recursive character(len=100) function pad10(s) result(res)
    character(len=100), intent(in) :: s
    str = s
    do while ((size(str) < 10))
      str = ' ' // str
    end do
    res = str
    return
  end function pad10
  recursive character(len=100) function trimRightStr(s) result(res)
    character(len=100), intent(in) :: s
    end = size(s)
    do while ((((end > 0) .and. s((end - 1)+1:end)) == ' '))
      end = (end - 1)
    end do
    res = s(0+1:end)
    return
  end function trimRightStr
  recursive subroutine main()
    allocate(res(0))
    count = 0
    k = (11 * 11)
    do while ((count < 20))
      if ((mod(((mod(((mod(k,3) == 0) .or. k),5) == 0) .or. k),7) == 0)) then
        k = (k + 2)
        cycle
      end if
      factors = primeFactors(k)
      if ((size(factors) > 1)) then
        write(s3,'(G0)') k
        s = s3
        includesAll = .true.
        prev = -1
        do i4 = 1, size(factors)
          f = factors(i4)
          if ((f == prev)) then
            cycle
          end if
          write(s5,'(G0)') f
          fs = s5
          if ((indexOf(s,fs) == (-1))) then
            includesAll = .false.
            exit
          end if
          prev = f
        end do
        if (includesAll) then
          if (allocated(app6)) deallocate(app6)
          allocate(app6(size(res)+1))
          app6(1:size(res)) = res
          app6(size(res)+1) = k
          res = app6
          count = (count + 1)
        end if
      end if
      k = (k + 2)
    end do
    line = ''
    do i7 = 1, size(res(1:10))
      e = res(1:10)(i7)
      line = (line + pad10(commatize(e))) // ' '
    end do
    print *, trimRightStr(line)
    line = ''
    do i8 = 1, size(res((10)+1:20))
      e = res((10)+1:20)(i8)
      line = (line + pad10(commatize(e))) // ' '
    end do
    print *, trimRightStr(line)
  end subroutine main
end program composite_numbers_k_with_no_single_digit_factors_whose_factors_are_all_substrings_of_k
